Refactor the bibliography file import to wizard.
Signed-off-by: Stéphane Galland <galland@arakhne.org>